feat(prod): validator docker deployment + genesis distribution tooling
- Per-validator docker-based setup scripts (helper/prod/validators)
- Genesis snapshot script + per-address genesis distribution (CSV replay)
- ValidatorKeyTool for generating PQ validator credentials
- Move prod.md into helper/prod/